ML Kit NEWS file                                         July 5, 2001

           **** ML Kit version 3.9.1 is released ****

 * mael 2001-07-05: Bug fix: valrec may now overwrite identifier
   status. Bug reported by Johnny Andersen.

 * mael 2001-07-05: Quotation support. When the option -quotation is
   given to the compiler at startup, the datatype 
      datatype 'a frag = QUOTE of string | ANTIQUOTE of 'a
   is available in the top-level environment. Moreover, the character
   ` cease to be allowed in symbolic identifiers. Values of the 'a
   frag datatype may be constructed using the quotation/antiquotation
   syntax:
        val s = "world" 
        val a : string frag list = `hello ^s - goodbye`


 * mael 2001-07-05: An uncaught exception now causes the program to
   return -1 to the shell (instead of 0). Suggestion by Stephen Weeks.

 * mael 2001-07-05: Bug fix: The function OS.FileSys.tmpName now
   returns a file name for a file in /tmp/ (instead of in /etc/). Bug
   reported by Stephen Weeks.


           **** ML Kit version 3.9.0 is released ****

 * many bug fixes

 * replaced HP backend with x86 native backend

 * bytecode backend added as an alternative to the x86 native backend;
   primarily, the bytecode backend is added for portability and for
   use with the SMLserver project, which adds Standard ML language
   support to AOLserver -- a webserver from America Online
 
 * added support for reference tracing garbage collection

 * Word31, Word32, Word8, Int31 and Int32 structures added


[1998-12-03]   **** ML Kit version 3.0 is released ****

 * ...

[1997]         **** ML Kit version 2.0 is released ****

 * ...

[1993]         **** ML Kit version 1.0 is released ****
