@@ -1,0 +1,11 @@
+<html>
+<body bgcolor=white>
+<h2>Temperature Conversion</h2> 
+Enter a temperature in degrees Celcius:
+<form method=get action=temp.sml>
+<input type=text name=temp_c>
+<input type=submit value="Compute Temperature in Fahrenheit">
+</form>
+<hr> <i>Served by SMLserver</i>
+</body>
+</html>
